fixed padding issue on profile on mobile

--- a/web/cobrands/popravito/base.scss
+++ b/web/cobrands/popravito/base.scss
@@ -1014,6 +1014,10 @@ label[for="message"]{
     padding-right: 0;
 }
 
+.notifications-form {
+    padding: 0;
+}
+
 .edit-button {
     background: url('/cobrands/popravito/images/edit.svg') no-repeat center;
     width: 20px;
